# Proyect_Simulacion

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: build.yml
Include/: gui.h  particle_system.h  vulkan_setup.h
Shaders/: particle.frag  particle.vert.spv
shaders/: particle.vert
src/: CMakeLists.txt  gui.cpp  main.cpp  particle_system.cpp  vulkan_setup.cpp
src/core/: command_buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp
src/particles/: particle.hpp  particle_system.cpp  particle_system.hpp
src/rendering/: particle_renderer.cpp  particle_renderer.hpp
src/utils/: vulkan_debug.cpp  vulkan_debug.hpp
src/window/: window.cpp  window.hpp
